--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -110,49 +110,6 @@
 {% endblock %}
 
 {% block postloadjs %}
-{{ block.super }}
-<script>
-        $('.owl-carousel').owlCarousel({
-        loop:true,
-        margin:10,
-        nav:true,
-        navText: ["<i class='fa fa-lg fa-angle-left'></i>", "<i class='fa fa-lg fa-angle-right'></i>"],
-        responsive:{
-            0:{
-                items:1
-            },
-            600:{
-                items:3
-            },
-            1000:{
-                items:3
-            }
-        }
-    })
-</script>
+    {{ block.super }}
+    {% include 'home/includes/owl_carousel_script.html' %}
 {% endblock %}
-<!--
-    {% for product in products %}
-                        <div class="card h-100">
-                            {% if product.image %}
-                                <a href="{% url 'product_detail' product.id %}">
-                                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                                </a>
-                            {% else %}
-                                <a href="{% url 'product_detail' product.id %}">
-                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                                </a>
-                            {% endif %}
-                            <div class="card-body pb-0">
-                                <p class="mb-0">{{ product.name }}</p>
-                            </div>
-                            <div class="card-footer bg-white pt-0 border-0 text-left">
-                                <div class="row">
-                                    <div class="col">
-                                        <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        {% endfor %}
--->
