--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -32,6 +32,35 @@
         </div>
     </div>
 </div>
+<!-- Company Information  -->
+<div class="home-page-item">
+    <div class="container">
+        <h1 class="logo-font text-black text-center">About FutureRetro</h1>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8">
+                <hr class="w-25 hr-heading-beige">
+                <p class="text-center">
+                    The FutureRetro is a clothing company created by Erica Johnsson, the FutureRetro customer
+                    is a modern-day woman who wants the classic and feminine silhouette of the 1940s-50s while
+                    remaining modern feel. The FutureRetro girl tends to dress a little bit conservatively, but
+                    the different items can be integrated into every girl's closet!
+                </p>
+                <p class="text-center">
+                    Every single item created is a one-of-a-kind, ’40-’50s inspired piece that is designed and
+                    hand-sewn by me, with fabrics and supplies from three local second-hand stores: Myrorna,
+                    Frälsningsarmén och Blocket. It is my own interpretation of the timeless femininity of this
+                    era and is intended for women in all walks of life: from the businesswoman to the stay-at-home
+                    mom. Every woman deserves to feel feminine and beautiful!
+                </p>
+                <p class="text-center">
+                    Love,
+                    Erica
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- New releases -->
 <div class="home-page-item">
     <div class="container h-100">
@@ -60,6 +89,7 @@
     </div>
 </div>
 
+<!-- Juicer embedden instagram feed https://www.juicer.io/feeds/futureretro_store -->
 <div class="home-page-item">
     <div class="container">
         <h1 class="logo-font text-black text-center">Instagram</h1>
